# Voxify

./: README
app/: build.gradle.kts
app/src/androidTest/java/com/example/voxify/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  jni-bridge.cpp
app/src/main/java/com/example/voxify/: MainActivity.kt
app/src/main/java/com/example/voxify/engine/: AudioEngine.kt
app/src/main/java/com/example/voxify/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: themes.xml
app/src/test/java/com/example/voxify/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
